--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,1 +1,4 @@
-@import "./partials/example";
+@import "<token/units.scss>"
+@import "<token/font-size.scss>"
+@import "<token/color.scss>"
+@import "<token/font.scss>"
