--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,4 @@
-@import "<token/units.scss>"
-@import "<token/font-size.scss>"
-@import "<token/color.scss>"
-@import "<token/font.scss>"
+@import "tokens/units.scss";
+@import "tokens/font-size.scss";
+@import "tokens/color-token.scss";
+@import "tokens/font.scss";
